[package]
name = "oak_semantic"
version = "0.1.0"
description = """
Per-file semantic index for R: scopes, symbols, bindings, and uses.
Also includes the Library cache, package definitions, and scope layers.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
testing = ["dep:tempfile"]

[lints]
workspace = true

[dependencies]
aether_parser.workspace = true
aether_syntax.workspace = true
anyhow.workspace = true
biome_rowan.workspace = true
biome_text_size.workspace = true
itertools.workspace = true
log.workspace = true
oak_core.workspace = true
oak_index_vec.workspace = true
oak_package_metadata.workspace = true
oak_sources.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
stdext.workspace = true
url.workspace = true

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
assert_matches.workspace = true
oak_semantic = { workspace = true, features = ["testing"] }
oak_sources = { workspace = true, features = ["testing"] }
tempfile.workspace = true
